# allele

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: cla-signatures.json
.github/workflows/: cla.yml
patches/: alacritty-clear-scrollback-on-erase-display.patch
resources/: Info.plist
script/: bundle-mac.sh  run-bundled.sh
src/: main.rs  settings.rs  settings_window.rs  text_input.rs
src/agents/: mod.rs
src/clone/: mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/hooks/: mod.rs
src/project/: mod.rs
src/scratch_pad/: editor.rs  mod.rs
src/session/: mod.rs
src/state/: mod.rs
src/terminal/: grid_element.rs  keymap.rs  mod.rs  pty_terminal.rs  terminal_view.rs
src/trust/: mod.rs
