[package]
name = "allele"
version = "0.1.0"
edition = "2021"
description = "Claude Code session manager — APFS clone management for parallel variant workflows"

[[bin]]
name = "Allele"
path = "src/main.rs"

[dependencies]
# GPUI — pinned to specific Zed commit (same rev Termy uses, known working)
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui" }

# Terminal emulation — Deverge fork with CSI 2J scrollback fix
alacritty_terminal = { git = "https://github.com/devergehq/alacritty.git", branch = "allele/clear-scrollback-on-csi2j" }

# Event channels (PTY ↔ UI)
flume = "0.11"

# Error handling
anyhow = "1"

# System FFI (clonefile)
libc = "0.2"

# Path utilities
dirs = "6"
which = "7"

# Grapheme-aware text segmentation for the Settings text input
unicode-segmentation = "1"

# State management
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching (for hook events)
notify = "7"

# APFS COW cloning
# clonetree or direct libc FFI — evaluate during Phase 1

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"  # Pin to avoid core-graphics version conflict with GPUI
cocoa = "0.26"
objc = "0.2"

[lints.rust]
# The `objc` 0.2 crate expands `#[cfg(feature = "cargo-clippy")]` inside its
# `msg_send!` / `class!` macros. That feature name is a legacy nightly signal
# that no longer exists, and cargo's check-cfg flags it. The crate is
# unmaintained (no newer release fixes this), so teach check-cfg about it.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "83de8a25e0ef71a8d762a148459bc863adaeb7e3", package = "gpui", features = ["test-support"] }
tempfile = "3"
